Fixed vertical positionnedpreview image on mobile

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -120,8 +120,21 @@ img{
 .striked {text-decoration:line-through;}
 .light { font-weight: normal; }
 .block { display: block; }
+.verticaly_centered {
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
 
 /* ---- Layout ---- */
+#super_wrapper {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
 .content{
 	margin: auto;
 	padding: 12px;
@@ -337,15 +350,7 @@ footer.content{
 	vertical-align: middle;
 	text-align: center;
 	z-index: 20;
-	background: rgba(80,80,80,0.4);
-}
-.image_preview img {
-	display: inline-block;
-	vertical-align: middle;
-	max-height: 100%;
-	max-width: 100%;
-	box-shadow: 0 0 20px rgba(0,0,25,0.4);
-	cursor: pointer;
+	background: rgba(80,80,80,0.8);
 }
 
 /* ACE EDITOR */
